<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity">


<Button
    android:id="@+id/button"
    style="@android:style/Widget.Button.Inset"
    android:layout_width="60dp"
    android:layout_height="40dp"
    android:layout_marginStart="2dp"
    android:layout_marginTop="361dp"
    android:layout_marginEnd="321dp"
    android:layout_marginBottom="322dp"
    android:gravity="start|center"
    android:text="AC"
    android:textColor="#FFEB3B"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0" />

<Button
    android:id="@+id/button2"
    style="@android:style/Widget.Button.Inset"
    android:layout_width="70dp"
    android:layout_height="50dp"
    android:layout_marginStart="103dp"
    android:layout_marginTop="360dp"
    android:layout_marginEnd="220dp"
    android:layout_marginBottom="323dp"
    android:text="DEL"
    android:textColor="#FFEB3B"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0" />

<Button
    android:id="@+id/button3"
    style="@android:style/Widget.Material.Light.Button.Small"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="314dp"
    android:layout_marginTop="359dp"
    android:layout_marginEnd="9dp"
    android:layout_marginBottom="324dp"
    android:onClick="onOperationClick"
    android:text="@string/operation_one"
    android:textColor="#FFEB3B"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<Button
    android:id="@+id/button4"
    style="@android:style/Widget.Material.Light.Button.Small"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="314dp"
    android:layout_marginTop="540dp"
    android:layout_marginEnd="9dp"
    android:layout_marginBottom="143dp"
    android:onClick="onOperationClick"
    android:text="@string/operation_two"
    android:textColor="#FFEB3B"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<Button
    android:id="@+id/button5"
    style="@android:style/Widget.Material.Light.Button.Small"
    android:layout_width="48dp"
    android:layout_height="49dp"
    android:layout_marginStart="314dp"
    android:layout_marginTop="481dp"
    android:layout_marginEnd="11dp"
    android:layout_marginBottom="205dp"
    android:onClick="onOperationClick"
    android:text="@string/operation_three"
    android:textColor="#FFEB3B"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<Button
    android:id="@+id/button6"
    style="@android:style/Widget.Material.Button.Small"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="314dp"
    android:layout_marginTop="419dp"
    android:layout_marginEnd="9dp"
    android:layout_marginBottom="264dp"
    android:onClick="onOperationClick"
    android:text="@string/operation_four"
    android:textColor="#FFEB3B"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<Button
    android:id="@+id/button7"
    style="@android:style/Widget.Button.Inset"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="453dp"
    android:layout_marginEnd="323dp"
    android:layout_marginBottom="230dp"
    android:text="@string/number_seven"
    android:textSize="20dp"
    android:textColor="#FFEB3B"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:onClick="onNumberClick"/>

<Button
    android:id="@+id/button8"
    style="@android:style/Widget.Button.Inset"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="103dp"
    android:layout_marginTop="453dp"
    android:layout_marginEnd="220dp"
    android:layout_marginBottom="230dp"
    android:text="@string/number_eight"
    android:textSize="20dp"
    android:textColor="#FFEB3B"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:onClick="onNumberClick"/>

<Button
    android:id="@+id/button9"
    style="@android:style/Widget.Button.Inset"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="205dp"
    android:layout_marginTop="453dp"
    android:layout_marginEnd="118dp"
    android:layout_marginBottom="230dp"
    android:text="@string/number_nine"
    android:textSize="20dp"
    android:textColor="#FFEB3B"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:onClick="onNumberClick"/>

<Button
    android:id="@+id/button10"
    style="@android:style/Widget.Button.Inset"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="526dp"
    android:layout_marginEnd="323dp"
    android:layout_marginBottom="157dp"
    android:text="@string/number_four"
    android:textSize="20dp"
    android:textColor="#FFEB3B"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:onClick="onNumberClick"/>

<Button
    android:id="@+id/button11"
    style="@android:style/Widget.Button.Inset"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="103dp"
    android:layout_marginTop="526dp"
    android:layout_marginEnd="220dp"
    android:layout_marginBottom="157dp"
    android:text="@string/number_five"
    android:textSize="20dp"
    android:textColor="#FFEB3B"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:onClick="onNumberClick"/>

<Button
    android:id="@+id/button12"
    style="@android:style/Widget.Button.Inset"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="205dp"
    android:layout_marginTop="526dp"
    android:layout_marginEnd="118dp"
    android:layout_marginBottom="157dp"
    android:text="@string/number_six"
    android:textSize="20dp"
    android:textColor="#FFEB3B"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:onClick="onNumberClick"/>

<Button
    android:id="@+id/button13"
    style="@android:style/Widget.Button.Inset"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="604dp"
    android:layout_marginEnd="323dp"
    android:layout_marginBottom="79dp"
    android:text="@string/number_one"
    android:textSize="20dp"
    android:textColor="#FFEB3B"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:onClick="onNumberClick"/>

<Button
    android:id="@+id/button14"
    style="@android:style/Widget.Button.Inset"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="103dp"
    android:layout_marginTop="604dp"
    android:layout_marginEnd="220dp"
    android:layout_marginBottom="79dp"
    android:text="@string/number_two"
    android:textSize="20dp"
    android:textColor="#FFEB3B"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:onClick="onNumberClick"/>

    <Button
        android:id="@+id/button15"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="205dp"
        android:layout_marginTop="604dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="79dp"
        android:onClick="onNumberClick"
        android:text="@string/number_three"
        android:textColor="#FFEB3B"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button16"
        style="@style/Numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="667dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="casual"
        android:lineSpacingExtra="8sp"
        android:onClick="onNumberClick"
        android:text="@string/number_null"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFEB3B"
        android:textSize="24sp"
        android:textStyle="italic"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
    android:id="@+id/button17"
    style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="314dp"
    android:layout_marginTop="640dp"
    android:layout_marginEnd="9dp"
    android:layout_marginBottom="43dp"
    android:onClick="onOperationClick"
    android:text="@string/operation_five"
    android:textColor="#000000"
    android:textSize="40dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/resultField"
    style="@style/MyEditText"
    android:text="@string/Request"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintHorizontal_weight="1"
    android:textSize="18sp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toLeftOf="@+id/operationField"/>

<TextView
    android:id="@+id/operationField"
    style="@style/MyEditText"
    android:text="@string/last_operation"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintHorizontal_weight="1"
    android:textSize="18sp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toRightOf="@+id/resultField"
    />

    <EditText
        android:id="@+id/numberField"
        style="@style/MyEditText"
        android:text="@string/EditText"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultField" />


    </androidx.constraintlayout.widget.ConstraintLayout>